base/argocd/argocd-repo-server.yaml
# argo-cd-repo-server-ksops-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: custom-tools
              mountPath: /usr/local/bin/ksops
              subPath: ksops/ksops
            - name: custom-tools
              mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops.so
              subPath: ksops/ksops.so
      volumes:
        - name: custom-tools
          emptyDir: {}
